--- a/src/index.html
+++ b/src/index.html
@@ -81,12 +81,12 @@
             </div>
             <nav>
                 <ul class="menu__list">
-                    <li class="menu__link"><a href="#">ПРО МЕНЯ</a></li>
-                    <li class="menu__link"><a href="#">МОЙ ОПЫТ</a></li>
-                    <li class="menu__link"><a href="#">МОИ НАВЫКИ</a></li>
-                    <li class="menu__link"><a href="#">МОИ РАБОТЫ</a></li>
-                    <li class="menu__link"><a href="#">ПРАЙС-ЛИСТ</a></li>
-                    <li class="menu__link"><a href="#">КОНТАКТЫ</a></li>
+                    <li class="menu__link"><a href="#about">ПРО МЕНЯ</a></li>
+                    <li class="menu__link"><a href="#resume">МОЙ ОПЫТ</a></li>
+                    <li class="menu__link"><a href="#skills">МОИ НАВЫКИ</a></li>
+                    <li class="menu__link"><a href="#portfolio">МОИ РАБОТЫ</a></li>
+                    <li class="menu__link"><a href="#price">ПРАЙС-ЛИСТ</a></li>
+                    <li class="menu__link"><a href="#contacts">КОНТАКТЫ</a></li>
                 </ul>
             </nav>
             <div class="menu__social">
@@ -119,13 +119,13 @@
             <div class="title title_fz16 promo__subtitle">Меня зовут Александра Смит</div>
             <h1 class="title title_fz48 promo__title">Я web-разработчик из города Москва</h1> <!-- promo__title - с помощью этого класса ограничиваю контент относительно секции ПРОМО, т.к. было решено не использовать <br> в тексте -->
             <div class="promo__btns">
-                <a href="#" class="promo__link btn">Портфолио</a>
-                <a href="#" class="promo__link">Про меня</a>
+                <a href="#portfolio" class="promo__link btn">Портфолио</a>
+                <a href="#about" class="promo__link">Про меня</a>
             </div>
         </div>
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__photo"><img src="img/main_photo.jpg" alt="photo"></div>
@@ -171,10 +171,10 @@
         </div>
     </section>
 
-    <section class="resume">
+    <section class="resume" id="resume">
         <div class="container">
-            <h2 class="title title_fz16 resume__title">Опыт</h2>
-            <div class="title resume__subtitle">Чем я буду полезна</div>
+            <h2 class="title title_fz16 title__section-title">Опыт</h2>
+            <div class="title title__section-subtitle">Чем я буду полезна</div>
             <div class="divider divider_mt25"></div>
             <div class="resume__wrapper">
                 <div class="resume__col">
@@ -247,10 +247,10 @@
         </div>
     </section>
 
-    <section class="skills">
+    <section class="skills" id="skills">
         <div class="container">
-            <h2 class="title title_fz16 skills__title">Навыки</h2>
-            <div class="title skills__subtitle">Что я использую в работе</div>
+            <h2 class="title title_fz16 title__section-title">Навыки</h2>
+            <div class="title title__section-subtitle">Что я использую в работе</div>
             <div class="divider divider_mt25"></div>
             <div class="skills__wrapper">
                 <div class="skills__item">
@@ -323,45 +323,152 @@
                     <h3 class="title title_fz14 skills__ratings-title">Создание сайтов</h3>
                     <div class="skills__ratings-indicator">100%</div>
                     <div class="skills__ratings-line">
-                        <span style="width: 100%;"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skills__ratings-item">
                     <h3 class="title title_fz14 skills__ratings-title">Создание приложений</h3>
                     <div class="skills__ratings-indicator">85%</div>
                     <div class="skills__ratings-line">
-                        <span style="width: 85%;"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skills__ratings-item">
                     <h3 class="title title_fz14 skills__ratings-title">Работа с данными</h3>
                     <div class="skills__ratings-indicator">90%</div>
                     <div class="skills__ratings-line">
-                        <span style="width: 90%;"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skills__ratings-item">
                     <h3 class="title title_fz14 skills__ratings-title">Креативность</h3>
                     <div class="skills__ratings-indicator">75%</div>
                     <div class="skills__ratings-line">
-                        <span style="width: 75%;"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skills__ratings-item">
                     <h3 class="title title_fz14 skills__ratings-title">Создание дизайна</h3>
                     <div class="skills__ratings-indicator">90%</div>
                     <div class="skills__ratings-line">
-                        <span style="width: 90%;"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skills__ratings-item">
                     <h3 class="title title_fz14 skills__ratings-title">Soft skills</h3>
                     <div class="skills__ratings-indicator">95%</div>
                     <div class="skills__ratings-line">
-                        <span style="width: 95%;"></span>
+                        <span></span>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="portfolio" id="portfolio">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title">Портфолио</h2>
+            <div class="title title__section-subtitle">Мои работы</div>
+            <div class="divider divider_mt25"></div>
+            <div class="portfolio__wrapper">
+                <a href="#" class="portfolio__item"><img src="img/works/uber.jpg" alt="uber"></a>
+                <a href="#" class="portfolio__item"><img src="img/works/pulse.jpg" alt="pulse"></a>
+                <a href="#" class="portfolio__item"><img src="img/works/bread.jpg" alt="bread"></a>
+                <a href="#" class="portfolio__item portfolio__item_plans"><img src="img/works/plans.jpg" alt="plans"></a>
+                <a href="#" class="portfolio__item"><img src="img/works/ipad.jpg" alt="ipad"></a>
+                <a href="#" class="portfolio__item portfolio__item_mac"><img src="img/works/mac.jpg" alt="mac"></a>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="price" id="price">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title">Прайс-лист</h2>
+            <div class="divider divider_mt25"></div>
+            <div class="price__wrapper">
+                <div class="price__wrapper-item">
+                    <h3 class="title title_fz14 price__title">Landing-page</h3>
+                    <div class="price__total">от 8000 руб.</div>
+                    <div class="price__descr">Одностраничный сайт для презентации услуг/товаров</div>
+                </div>
+                <div class="price__wrapper-item">
+                    <h3 class="title title_fz14 price__title">Web-приложение</h3>
+                    <div class="price__total">от 28000 руб.</div>
+                    <div class="price__descr">Приложение внутри браузера для лучшего комфорта</div>
+                </div>
+                <div class="price__wrapper-item">
+                    <h3 class="title title_fz14 price__title">Корпоративный сайт</h3>
+                    <div class="price__total">от 20000 руб.</div>
+                    <div class="price__descr">Сайт для вашего бизнеса или компании</div>
+                </div>
+                <div class="price__wrapper-item">
+                    <h3 class="title title_fz14 price__title">Android/IOS Приложение</h3>
+                    <div class="price__total">от 25000 руб.</div>
+                    <div class="price__descr">Приложение для смартфона любой ОС</div>
+                </div>
+                <div class="price__wrapper-item">
+                    <h3 class="title title_fz14 price__title">Интернет-магазин</h3>
+                    <div class="price__total">от 30000 руб.</div>
+                    <div class="price__descr">Инструмент для ваших продаж в сети</div>
+                </div>
+                <div class="price__wrapper-item">
+                    <h3 class="title title_fz14 price__title">Дизайн</h3>
+                    <div class="price__total">Индивидуально</div>
+                    <div class="price__descr">Создам дизайн для вашего сайта/приложения</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contacts" id="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__photo"><img src="img/main_photo.jpg" alt="photo"></div>
+                <div class="contacts__descr">
+                    <h2 class="title title_fz16 contacts__title">Контакты</h2>
+                    <div class="title contacts__subtitle">Свяжитесь со мной</div>
+                    <div class="divider"></div>
+                    <h3 class="title title_fz14 contacts__text">Любым удобным для вас способом:</h3>
+                    <div class="contacts__social">
+                        <a href="" class="contacts__link">
+                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M25.6055 0L4.39453 0C1.97159 0 0 1.97159 0 4.39453L0 25.6055C0 28.0284 1.97159 30 4.39453 30L13.2422 30L13.2422 19.3945L9.72656 19.3945L9.72656 14.1211H13.2422V10.5469C13.2422 7.63893 15.6077 5.27344 18.5156 5.27344L23.8477 5.27344V10.5469H18.5156L18.5156 14.1211H23.8477L22.9687 19.3945H18.5156V30H25.6055C28.0284 30 30 28.0284 30 25.6055L30 4.39453C30 1.97159 28.0284 0 25.6055 0Z" fill="black"/>
+                            </svg>                                
+                        </a>
+                        <a href="" class="contacts__link">
+                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15 30C23.2863 30 30 23.2863 30 15C30 6.71375 23.2863 0 15 0C6.71375 0 0 6.71375 0 15C0 23.2863 6.71375 30 15 30ZM6.86375 14.675L21.3263 9.09875C21.9975 8.85625 22.5837 9.2625 22.3662 10.2775L22.3675 10.2762L19.905 21.8775C19.7225 22.7 19.2337 22.9 18.55 22.5125L14.8 19.7487L12.9912 21.4913C12.7912 21.6913 12.6225 21.86 12.235 21.86L12.5013 18.0438L19.4513 11.765C19.7537 11.4987 19.3837 11.3488 18.985 11.6138L10.3963 17.0212L6.69375 15.8663C5.89 15.6112 5.8725 15.0625 6.86375 14.675Z" fill="black"/>
+                            </svg>
+                        </a>
+                        <a href="" class="contacts__link">
+                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M-9.01547e-07 9.375L-4.09794e-07 20.625C-1.83506e-07 25.8019 4.19812 30 9.375 30L20.625 30C25.8019 30 30 25.8019 30 20.625L30 9.375C30 4.19813 25.8019 7.79513e-07 20.625 1.0058e-06L9.375 1.49755e-06C4.19812 1.72384e-06 -1.12784e-06 4.19813 -9.01547e-07 9.375ZM20.625 2.8125C24.2437 2.8125 27.1875 5.75625 27.1875 9.375L27.1875 20.625C27.1875 24.2437 24.2437 27.1875 20.625 27.1875L9.375 27.1875C5.75625 27.1875 2.8125 24.2437 2.8125 20.625L2.8125 9.375C2.8125 5.75625 5.75625 2.8125 9.375 2.8125L20.625 2.8125Z" fill="black"/>
+                                <path d="M7.5 15C7.5 19.1419 10.8581 22.5 15 22.5C19.1419 22.5 22.5 19.1419 22.5 15C22.5 10.8581 19.1419 7.5 15 7.5C10.8581 7.5 7.5 10.8581 7.5 15ZM19.6875 15C19.6875 17.5837 17.5837 19.6875 15 19.6875C12.4144 19.6875 10.3125 17.5838 10.3125 15C10.3125 12.4163 12.4144 10.3125 15 10.3125C17.5837 10.3125 19.6875 12.4162 19.6875 15Z" fill="black"/>
+                                <path d="M7.93685 6.93715C7.93685 6.38521 7.48942 5.93777 6.93748 5.93777C6.38554 5.93777 5.93811 6.38521 5.93811 6.93715C5.93811 7.48909 6.38554 7.93652 6.93748 7.93652C7.48942 7.93652 7.93685 7.48909 7.93685 6.93715Z" fill="black"/>
+                            </svg>
+                        </a>
+                    </div>
+                    <h3 class="title title_fz14 contacts__text">Или оставьте ваши данные и я сама вам напишу:</h3>
+                    <form action="#" class="contacts__form">
+                        <div class="contacts__input">
+                            <input name="name" id="name" type="text">
+                            <label for="name">Ваше имя</label>
+                        </div>
+                        <div class="contacts__input">
+                            <input name="email" id="email" type="email">
+                            <label for="email">Ваша почта</label>
+                        </div>
+                        <div class="contacts__textarea">
+                            <textarea name="text" id="text"></textarea>
+                            <label for="text">Ваше сообщение</label>
+                        </div>
+                        <div>     <!-- кнопку обернул в div, чтобы она не растягивалась на всю колонку -->
+                            <button class="btn contacts__btn">Отправить сообщение</button>  
+                        </div>
+                    </form>
+                </div>
+            </div>    
         </div>
     </section>
 
